--- a/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,10 @@
-<p>nav-bar works!</p>
+<header>
+  <nav>
+    <img src="./assets/images/logo.svg" alt="Shortly" />
+    <button>
+      <div></div>
+      <div></div>
+      <div></div>
+    </button>
+  </nav>
+</header>
