--- a/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
@@ -1,10 +1,6 @@
 <header>
   <nav>
     <img src="./assets/images/logo.svg" alt="Shortly" />
-    <button>
-      <div></div>
-      <div></div>
-      <div></div>
-    </button>
+    <app-sidemenu></app-sidemenu>
   </nav>
 </header>
