agregado de estilos en sidemenu

--- a/src/app/modules/navigation/components/sidemenu/sidemenu.component.html
+++ b/src/app/modules/navigation/components/sidemenu/sidemenu.component.html
@@ -3,10 +3,12 @@
   <div></div>
   <div></div>
 </button>
+
 <span [ngClass]="{ active: show }">
   <ul>
     <li *ngFor="let link of links">
       <a>{{ link.label }}</a>
     </li>
   </ul>
+  <div (click)="showNav()"></div>
 </span>
