--- a/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav>
     <img src="./assets/images/logo.svg" alt="Shortly" />
-    <app-sidemenu></app-sidemenu>
+    <app-sidemenu [links]="links"></app-sidemenu>
   </nav>
 </header>
