--- a/src/app/modules/navigation/components/sidemenu/sidemenu.component.scss
+++ b/src/app/modules/navigation/components/sidemenu/sidemenu.component.scss
@@ -15,11 +15,45 @@ button {
 
 span {
   top: -200vh;
+  left: 0;
   position: absolute;
   width: 100%;
   height: 100vh;
+  transition: top ease-in 0.4s;
+  display: flex;
+  justify-content: center;
+
+  ul {
+    margin-top: 5.6rem;
+    background-color: hsl(257, 27%, 26%);
+    z-index: 2;
+    width: 75%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    padding: 2.3rem 1.4rem;
+    max-width: 400px;
+    height: fit-content;
+
+    li {
+      color: white;
+      font-size: 18px;
+      font-weight: 700;
+    }
+  }
+
+  div {
+    width: 100vw;
+    height: 100vh;
+
+    position: absolute;
+    z-index: 1;
+  }
 }
 
 span.active {
   top: 0;
+  transition: top ease-out 0.4s;
 }
