--- a/src/app/modules/navigation/components/sidemenu/sidemenu.component.scss
+++ b/src/app/modules/navigation/components/sidemenu/sidemenu.component.scss
@@ -42,6 +42,12 @@ span {
       font-size: 18px;
       font-weight: 700;
     }
+    hr {
+      border: none;
+      background-color: #72727285;
+      height: 1px;
+      width: 100%;
+    }
   }
 
   div {
