--- a/src/app/modules/buttons/components/text-button/text-button.component.scss
+++ b/src/app/modules/buttons/components/text-button/text-button.component.scss
@@ -7,8 +7,14 @@ button {
   color: white;
   border-radius: 200px;
   padding: 0.6rem 1rem;
+}
+
+// TODO : Update large styles
+button.large {
   max-width: 200px;
   width: 100%;
 }
-// TODO : Add fat styles
-// TODO : Add large styles
+
+button.fat {
+  padding: 0.9rem 2.5rem;
+}
