--- a/src/app/modules/navigation/components/nav-bar/nav-bar.component.scss
+++ b/src/app/modules/navigation/components/nav-bar/nav-bar.component.scss
@@ -4,6 +4,6 @@ header {
   nav {
     display: flex;
     justify-content: space-between;
-    padding: 2.1rem 1.5rem;
+    padding: 2.5rem 1.5rem 1.5rem;
   }
 }
