--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -5,12 +5,14 @@
         src="../../../assets/images/illustration-working.svg"
         alt="illustration-working"
       />
-      <h2>More than just shorter links</h2>
-      <p>
-        Build your brand's recognition and get detailed insights on how your
-        links are performing.
-      </p>
-      <app-text-button [type]="'fat'">Get Started</app-text-button>
+      <div>
+        <h2>More than just shorter links</h2>
+        <p>
+          Build your brand's recognition and get detailed insights on how your
+          links are performing.
+        </p>
+        <app-text-button [type]="'fat'">Get Started</app-text-button>
+      </div>
     </article>
   </section>
 </main>
