--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -2,7 +2,14 @@ section article {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 2.5rem;
+}
+
+section article div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.4rem;
 }
 
 section article p {
@@ -22,5 +29,5 @@ section article img {
   width: 100vw;
   height: 335px;
   object-fit: cover;
-  object-position: 27px;
+  object-position: 19px;
 }
