--- a/src/app/modules/navigation/components/sidemenu/sidemenu.component.scss
+++ b/src/app/modules/navigation/components/sidemenu/sidemenu.component.scss
@@ -41,6 +41,9 @@ span {
       color: white;
       font-size: 18px;
       font-weight: 700;
+      a {
+        color: white;
+      }
     }
     hr {
       border: none;
