--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -14,5 +14,8 @@
         <app-text-button [type]="'fat'">Get Started</app-text-button>
       </div>
     </article>
+    <article>
+      <app-short-box></app-short-box>
+    </article>
   </section>
 </main>
