--- a/src/app/modules/link-shorting/components/short-box/short-box.component.html
+++ b/src/app/modules/link-shorting/components/short-box/short-box.component.html
@@ -1,4 +1,4 @@
 <form>
-  <input type="text" />
-  <app-square-button-text>Shorten It!</app-square-button-text>
+  <input type="text" placeholder="Shorten a link here..." />
+  <app-square-button-text [fill]="true">Shorten It!</app-square-button-text>
 </form>
