--- a/src/app/modules/link-shorting/components/short-box/short-box.component.scss
+++ b/src/app/modules/link-shorting/components/short-box/short-box.component.scss
@@ -2,4 +2,19 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: url("../../../../../assets/images/bg-shorten-mobile.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 1.4rem;
+  border-radius: 10px;
+  background-color: hsl(257, 27%, 26%);
+  gap: 1rem;
+
+  input {
+    width: 100%;
+    padding: 0.8rem;
+    font-size: 15px;
+    border-radius: 5px;
+    border: none;
+  }
 }
