--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,33 +1,39 @@
-section article {
+section {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 2.5rem;
-}
+  gap: 5.5rem;
 
-section article div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1.4rem;
-}
+  article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.5rem;
 
-section article p {
-  text-align: center;
-  color: gray;
-  font-size: 17px;
-}
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.4rem;
+    }
 
-section article h2 {
-  font-size: 41px;
-  text-align: center;
-  line-height: 44px;
-  color: hsl(0deg 0% 20.47%);
-}
+    p {
+      text-align: center;
+      color: gray;
+      font-size: 17px;
+    }
 
-section article img {
-  width: 100vw;
-  height: 335px;
-  object-fit: cover;
-  object-position: 19px;
+    h2 {
+      font-size: 41px;
+      text-align: center;
+      line-height: 44px;
+      color: hsl(0deg 0% 20.47%);
+    }
+
+    img {
+      width: 100vw;
+      height: 335px;
+      object-fit: cover;
+      object-position: 19px;
+    }
+  }
 }
