agregando estilos al short box + estilos ajustados + tests en short box pasados

--- a/src/app/modules/buttons/components/text-button/text-button.component.scss
+++ b/src/app/modules/buttons/components/text-button/text-button.component.scss
@@ -11,8 +11,9 @@ button {
 
 // TODO : Update large styles
 button.large {
-  max-width: 200px;
+  display: block;
   width: 100%;
+  box-sizing: border-box;
 }
 
 button.fat {
