--- a/src/app/modules/navigation/components/sidemenu/sidemenu.component.html
+++ b/src/app/modules/navigation/components/sidemenu/sidemenu.component.html
@@ -11,7 +11,7 @@
     </li>
     <hr />
     <li>Login</li>
-    <li>
+    <li style="width: 100%">
       <app-text-button [type]="'large'">Sign Up</app-text-button>
     </li>
   </ul>
