--- a/src/app/modules/buttons/components/square-button-text/square-button-text.component.scss
+++ b/src/app/modules/buttons/components/square-button-text/square-button-text.component.scss
@@ -4,8 +4,11 @@ button {
   font-weight: 600;
   border-radius: 6px;
   border: none;
+  color: white;
+  background-color: hsl(180, 66%, 49%);
 }
 
 button.fill {
+  position: absolute;
   width: 100%;
 }
