--- a/src/app/modules/link-shorting/components/short-box/short-box.component.scss
+++ b/src/app/modules/link-shorting/components/short-box/short-box.component.scss
@@ -2,15 +2,28 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("../../../../../assets/images/bg-shorten-mobile.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
   padding: 1.4rem;
   border-radius: 10px;
   background-color: hsl(257, 27%, 26%);
   gap: 1rem;
+  width: 78%;
+  margin: 0 auto;
+
+  // Background
+  background-image: url("../../../../../assets/images/bg-shorten-mobile.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: 102px;
+  background-position-y: -48px;
+
+  div {
+    position: relative;
+    width: 100%;
+    height: 48px;
+  }
 
   input {
+    box-sizing: border-box;
     width: 100%;
     padding: 0.8rem;
     font-size: 15px;
