agregado de observable con los links shorts

--- a/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,8 @@
 <header>
   <nav>
-    <img src="./assets/images/logo.svg" alt="Shortly" />
+    <a [routerLink]="'/'">
+      <img src="./assets/images/logo.svg" alt="Shortly" />
+    </a>
     <app-sidemenu [links]="links"></app-sidemenu>
   </nav>
 </header>
