agregado de tests y funcionalidad en link card

--- a/src/app/modules/link-shorting/components/link-card/link-card.component.html
+++ b/src/app/modules/link-shorting/components/link-card/link-card.component.html
@@ -1,8 +1,10 @@
 <article>
   <ul>
-    <li>Original</li>
+    <li>{{ linkData.originalLink }}</li>
     <hr />
-    <li>Corto</li>
+    <li>{{ linkData.shortLink }}</li>
   </ul>
-  <app-square-button-text [fill]="true">Copy</app-square-button-text>
+  <app-square-button-text (click)="copyLink()" [fill]="true">{{
+    !copied ? "Copy" : "Copied!"
+  }}</app-square-button-text>
 </article>
