agregado de respuesta al usuario al copiar link

--- a/src/app/modules/buttons/components/square-button-text/square-button-text.component.html
+++ b/src/app/modules/buttons/components/square-button-text/square-button-text.component.html
@@ -1,1 +1,3 @@
-<button [ngClass]="{ fill: fill }"><ng-content></ng-content></button>
+<button [ngClass]="{ fill: fill, clicked: clicked }">
+  <ng-content></ng-content>
+</button>
