agregado de estilos a link card + correccion de estilos en home page

--- a/src/app/modules/link-shorting/components/link-card/link-card.component.html
+++ b/src/app/modules/link-shorting/components/link-card/link-card.component.html
@@ -2,7 +2,11 @@
   <ul>
     <li>{{ linkData.originalLink }}</li>
     <hr />
-    <li>{{ linkData.shortLink }}</li>
+    <li>
+      <a href="https://{{ linkData.shortLink }}" target="_blank">{{
+        linkData.shortLink
+      }}</a>
+    </li>
   </ul>
   <div>
     <app-square-button-text
