--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -20,6 +20,7 @@ section {
       text-align: center;
       color: gray;
       font-size: 17px;
+      max-width: 375px;
     }
 
     h2 {
@@ -27,6 +28,7 @@ section {
       text-align: center;
       line-height: 44px;
       color: hsl(0deg 0% 20.47%);
+      max-width: 375px;
     }
 
     img {
