--- a/src/app/modules/link-shorting/components/link-card/link-card.component.scss
+++ b/src/app/modules/link-shorting/components/link-card/link-card.component.scss
@@ -1,8 +1,45 @@
 article {
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  width: 100%;
+  margin: 1rem 0;
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+
+  hr {
+    border: none;
+    height: 1px;
+    width: 100%;
+    background-color: rgba(206, 206, 206, 0.726);
+  }
+
+  ul {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    li {
+      padding: 0.8rem 0;
+      color: black;
+      width: 91%;
+
+      a {
+        color: hsl(180, 66%, 49%);
+      }
+    }
+  }
+
   div {
     display: block;
     position: relative;
-    width: 100%;
-    height: 50px;
+    width: 91%;
+    height: 48px;
+    padding-bottom: 1.1rem;
   }
 }
