agregado de estilos en artculo home y creacion de de modulo de decorations

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -18,6 +18,14 @@
       <article>
         <app-short-box></app-short-box>
       </article>
+
+      <article>
+        <h3>Advanced Statistics</h3>
+        <p>
+          Track how your links are performing across the web with our advanced
+          statistics dashboard.
+        </p>
+      </article>
     </section>
   </section>
 </main>
