agregando estructura de icon card e icon card list + tests

--- a/src/app/modules/decorations/components/icon-card/icon-card.component.html
+++ b/src/app/modules/decorations/components/icon-card/icon-card.component.html
@@ -1,1 +1,5 @@
-<p>icon-card works!</p>
+<article>
+  <img src="{{ data.icon }}" alt="{{ data.header }}" />
+  <h4>{{ data.header }}</h4>
+  <p>{{ data.content }}</p>
+</article>
