agregado de tests a icon card y agregado a home page

--- a/src/app/modules/decorations/components/icon-card-list/icon-card-list.component.html
+++ b/src/app/modules/decorations/components/icon-card-list/icon-card-list.component.html
@@ -1,1 +1,6 @@
-<p>icon-card-list works!</p>
+<section>
+  <app-icon-card
+    *ngFor="let card of cardListData"
+    [data]="card"
+  ></app-icon-card>
+</section>
