--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -25,6 +25,10 @@
           Track how your links are performing across the web with our advanced
           statistics dashboard.
         </p>
+
+        <app-icon-card-list
+          [cardListData]="contentArticles"
+        ></app-icon-card-list>
       </article>
     </section>
   </section>
