--- a/src/app/modules/decorations/components/icon-card/icon-card.component.html
+++ b/src/app/modules/decorations/components/icon-card/icon-card.component.html
@@ -1,5 +1,7 @@
 <article>
-  <img src="{{ data.icon }}" alt="{{ data.header }}" />
+  <div>
+    <img src="{{ data.icon }}" alt="{{ data.header }}" />
+  </div>
   <h4>{{ data.header }}</h4>
   <p>{{ data.content }}</p>
 </article>
