--- a/src/app/modules/decorations/components/icon-card/icon-card.component.scss
+++ b/src/app/modules/decorations/components/icon-card/icon-card.component.scss
@@ -5,10 +5,18 @@ article {
   max-width: 325px;
   background-color: white;
   border-radius: 6px;
+  box-sizing: border-box;
+  padding: 4rem 2rem 2.5rem;
+  position: relative;
+  gap: 0.9rem;
+
   div {
+    position: absolute;
+    top: -43px;
+
     background-color: hsl(257, 27%, 26%);
     border-radius: 100%;
-    padding: 1rem;
+    padding: 1.1rem;
     width: 50px;
     height: 50px;
 
@@ -19,5 +27,20 @@ article {
       object-fit: contain;
       width: 38px;
     }
+  }
+  h4 {
+    font-size: 21px;
+    text-align: center;
+    line-height: 44px;
+    color: hsl(0deg 0% 20.47%);
+    max-width: 375px;
+  }
+
+  p {
+    color: #959595;
+    font-size: 15px;
+    text-align: center;
+    max-width: 270px;
+    line-height: 27px;
   }
 }
