--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -5,7 +5,7 @@ section {
 
   section {
     background-color: hsl(259deg 28.56% 95.59%);
-
+    padding-bottom: 5rem;
     gap: 1rem;
 
     article {
@@ -64,6 +64,10 @@ section {
       height: 335px;
       object-fit: cover;
       object-position: 19px;
+    }
+
+    app-icon-card-list {
+      margin-top: 2rem;
     }
   }
 }
