--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,22 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-}
 
-a {
-  text-decoration: none;
-}
+  body {
+    min-height: 100vh;
 
-li {
-  list-style-type: none;
+    app-root {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    li {
+      list-style-type: none;
+    }
+  }
 }
