--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -31,5 +31,9 @@
         ></app-icon-card-list>
       </article>
     </section>
+    <article class="add-article">
+      <h3>Boost your links today</h3>
+      <app-text-button> Get Started </app-text-button>
+    </article>
   </section>
 </main>
