--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -23,6 +23,25 @@ section {
     }
   }
 
+  .add-article {
+    // Background
+    background-color: hsl(257, 27%, 26%);
+    background-image: url("../../../assets/images/bg-boost-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    gap: 0.9rem;
+
+    h3 {
+      color: white;
+    }
+  }
   article {
     display: flex;
     flex-direction: column;
