--- a/src/app/modules/navigation/components/footer/footer.component.scss
+++ b/src/app/modules/navigation/components/footer/footer.component.scss
@@ -6,28 +6,38 @@ footer {
   align-items: center;
 
   padding: 3rem 0;
+  gap: 3rem;
 
   ul {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2rem;
   }
 
   .root-link {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    gap: 1.3rem;
     a {
       color: rgb(255, 255, 255);
+      font-weight: 700;
+      font-size: 15px;
     }
     ul {
+      gap: 0.5rem;
       a {
         color: #979797;
+        font-weight: 500;
+        font-size: 14px;
       }
     }
   }
 
   .social-media {
+    gap: 1.5rem;
     display: flex;
     flex-direction: row;
   }
