--- a/src/app/modules/decorations/components/loader/loader.component.html
+++ b/src/app/modules/decorations/components/loader/loader.component.html
@@ -1,1 +1,6 @@
-<p>loader works!</p>
+<div class="loader" *ngIf="isLoading | async">
+  <div class="lds-ripple">
+    <div></div>
+    <div></div>
+  </div>
+</div>
