--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <main>
   <section>
-    <article>
+    <article class="main-section">
       <img
         src="../../../assets/images/illustration-working.svg"
         alt="illustration-working"
