--- a/src/app/modules/navigation/components/nav-bar/nav-bar.component.scss
+++ b/src/app/modules/navigation/components/nav-bar/nav-bar.component.scss
@@ -1,9 +1,51 @@
 header {
   background-color: hsl(0, 0%, 100%);
 
+  @media only screen and (min-width: 576px) {
+    display: flex;
+    justify-content: center;
+  }
+
   nav {
     display: flex;
     justify-content: space-between;
     padding: 2.5rem 1.5rem 1.5rem;
+
+    @media only screen and (min-width: 576px) {
+      max-width: 1100px;
+      width: 100%;
+    }
+
+    div {
+      display: flex;
+      align-items: center;
+      gap: 3rem;
+    }
+
+    ul {
+      display: none;
+      @media only screen and (min-width: 576px) {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+
+        li {
+          a {
+            font-size: 15px;
+            font-weight: 600;
+            color: rgb(150, 150, 150);
+
+            &:hover {
+              color: black;
+            }
+          }
+        }
+      }
+    }
+    app-sidemenu {
+      @media only screen and (min-width: 576px) {
+        display: none;
+      }
+    }
   }
 }
