--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -2,10 +2,18 @@ section {
   display: flex;
   flex-direction: column;
   gap: 10.5rem;
+  align-items: center;
+  width: 100%;
+
+  .main-section {
+    @media only screen and (min-width: 576px) {
+      flex-direction: row-reverse;
+      max-width: 1100px;
+    }
+  }
 
   section {
     background-color: hsl(259deg 28.56% 95.59%);
-
     gap: 1rem;
 
     article {
@@ -47,6 +55,7 @@ section {
     flex-direction: column;
     align-items: center;
     gap: 2.5rem;
+    width: 100%;
 
     div {
       display: flex;
