--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -9,6 +9,28 @@ section {
     @media only screen and (min-width: 576px) {
       flex-direction: row-reverse;
       max-width: 1100px;
+      height: 550px;
+      div {
+        width: 100%;
+
+        gap: 0.3rem;
+
+        align-items: flex-start;
+
+        h2 {
+          font-size: 81px;
+          line-height: 89px;
+          text-align: start;
+          max-width: 700px;
+        }
+
+        p {
+          margin-bottom: 2rem;
+        }
+      }
+      img {
+        width: 40%;
+      }
     }
   }
 
@@ -66,9 +88,14 @@ section {
 
     p {
       text-align: center;
-      color: gray;
+      color: rgb(139, 139, 139);
       font-size: 17px;
       max-width: 375px;
+      @media only screen and (min-width: 576px) {
+        text-align: start;
+        max-width: 600px;
+        font-size: 23px;
+      }
     }
 
     h2 {
