haciendo mas responsive home en desktop + agregado de estilos responsive shortbox

--- a/src/app/modules/buttons/components/text-button/text-button.component.scss
+++ b/src/app/modules/buttons/components/text-button/text-button.component.scss
@@ -7,6 +7,10 @@ button {
   color: white;
   border-radius: 200px;
   padding: 0.6rem 1rem;
+  position: relative;
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 // TODO : Update large styles
