--- a/src/app/modules/link-shorting/components/short-box/short-box.component.scss
+++ b/src/app/modules/link-shorting/components/short-box/short-box.component.scss
@@ -9,6 +9,12 @@ form {
   width: 78%;
   margin: 0 auto 2rem;
 
+  @media only screen and (min-width: 576px) {
+    flex-direction: row;
+    width: 100%;
+    max-width: 1100px;
+  }
+
   .invalid-input {
     border: 3px rgb(243, 94, 94) solid;
     box-sizing: border-box;
