--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,130 +1,142 @@
-section {
-  display: flex;
-  flex-direction: column;
-  gap: 10.5rem;
-  align-items: center;
-  width: 100%;
-
-  .main-section {
-    @media only screen and (min-width: 576px) {
-      flex-direction: row-reverse;
-      max-width: 1100px;
-      height: 550px;
-      div {
-        width: 100%;
-
-        gap: 0.3rem;
-
-        align-items: flex-start;
-
-        h2 {
-          font-size: 81px;
-          line-height: 89px;
-          text-align: start;
-          max-width: 700px;
-        }
-
-        p {
-          margin-bottom: 2rem;
-        }
-      }
-      img {
-        width: 40%;
-      }
-    }
+main {
+  @media only screen and (min-width: 576px) {
+    overflow-x: hidden;
   }
 
   section {
-    background-color: hsl(259deg 28.56% 95.59%);
-    gap: 1rem;
-
-    article {
-      app-short-box {
-        transform: translate(0px, -79px);
-      }
-
-      gap: 1rem;
-
-      p {
-        max-width: 290px;
-        font-size: 16px;
-        color: #919191;
-      }
-    }
-  }
-
-  .add-article {
-    // Background
-    background-color: hsl(257, 27%, 26%);
-    background-image: url("../../../assets/images/bg-boost-mobile.svg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-
-    height: 300px;
     display: flex;
     flex-direction: column;
+    gap: 10.5rem;
     align-items: center;
-    justify-content: center;
-
-    gap: 0.9rem;
-
-    h3 {
-      color: white;
-    }
-  }
-  article {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2.5rem;
     width: 100%;
 
-    div {
+    .main-section {
+      @media only screen and (min-width: 576px) {
+        flex-direction: row-reverse;
+        max-width: 1100px;
+        height: 550px;
+        div {
+          width: 100%;
+
+          gap: 0.3rem;
+
+          align-items: flex-start;
+
+          h2 {
+            font-size: 81px;
+            line-height: 89px;
+            text-align: start;
+            max-width: 700px;
+          }
+
+          p {
+            margin-bottom: 2rem;
+          }
+        }
+        img {
+          width: 40%;
+          height: 490px;
+          object-position: -27px;
+          overflow-x: inherit;
+        }
+      }
+    }
+
+    section {
+      background-color: hsl(259deg 28.56% 95.59%);
+      gap: 1rem;
+
+      article {
+        app-short-box {
+          @media only screen and (min-width: 576px) {
+            width: 100%;
+          }
+          transform: translate(0px, -79px);
+        }
+
+        gap: 1rem;
+
+        p {
+          max-width: 290px;
+          font-size: 16px;
+          color: #919191;
+        }
+      }
+    }
+
+    .add-article {
+      // Background
+      background-color: hsl(257, 27%, 26%);
+      background-image: url("../../../assets/images/bg-boost-mobile.svg");
+      background-repeat: no-repeat;
+      background-size: 100%;
+
+      height: 300px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 1.4rem;
-    }
+      justify-content: center;
 
-    p {
-      text-align: center;
-      color: rgb(139, 139, 139);
-      font-size: 17px;
-      max-width: 375px;
-      @media only screen and (min-width: 576px) {
-        text-align: start;
-        max-width: 600px;
-        font-size: 23px;
+      gap: 0.9rem;
+
+      h3 {
+        color: white;
       }
     }
+    article {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2.5rem;
+      width: 100%;
 
-    h2 {
-      font-size: 41px;
-      text-align: center;
-      line-height: 44px;
-      color: hsl(0deg 0% 20.47%);
-      max-width: 375px;
-    }
+      div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1.4rem;
+      }
 
-    h3 {
-      font-size: 27px;
-      text-align: center;
-      line-height: 44px;
-      color: hsl(0deg 0% 20.47%);
-      max-width: 375px;
-    }
+      p {
+        text-align: center;
+        color: rgb(139, 139, 139);
+        font-size: 17px;
+        max-width: 375px;
+        @media only screen and (min-width: 576px) {
+          text-align: start;
+          max-width: 600px;
+          font-size: 23px;
+        }
+      }
 
-    img {
-      width: 100vw;
-      height: 335px;
-      object-fit: cover;
-      object-position: 19px;
-    }
+      h2 {
+        font-size: 41px;
+        text-align: center;
+        line-height: 44px;
+        color: hsl(0deg 0% 20.47%);
+        max-width: 375px;
+      }
 
-    app-icon-card-list {
-      margin-top: 2rem;
+      h3 {
+        font-size: 27px;
+        text-align: center;
+        line-height: 44px;
+        color: hsl(0deg 0% 20.47%);
+        max-width: 375px;
+      }
 
-      padding-bottom: 5rem;
+      img {
+        width: 100vw;
+        height: 335px;
+        object-fit: cover;
+        object-position: 19px;
+      }
+
+      app-icon-card-list {
+        margin-top: 2rem;
+
+        padding-bottom: 5rem;
+      }
     }
   }
 }
