--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -50,6 +50,7 @@ main {
         app-short-box {
           @media only screen and (min-width: 576px) {
             width: 100%;
+            transform: translate(0px, -90px);
           }
           transform: translate(0px, -79px);
         }
