--- a/src/app/modules/decorations/components/icon-card/icon-card.component.scss
+++ b/src/app/modules/decorations/components/icon-card/icon-card.component.scss
@@ -10,6 +10,12 @@ article {
   position: relative;
   gap: 0.9rem;
 
+  @media only screen and (min-width: 576px) {
+    align-items: flex-start;
+    max-width: 360px;
+    width: 100%;
+    height: 100%;
+  }
   div {
     position: absolute;
     top: -43px;
@@ -42,5 +48,10 @@ article {
     text-align: center;
     max-width: 270px;
     line-height: 27px;
+    @media only screen and (min-width: 576px) {
+      text-align: start;
+      max-width: 500px;
+      font-size: 16px;
+    }
   }
 }
