terminado de version responsive de card icon list + tests + cambiado de foto en boost desktop

--- a/src/app/modules/decorations/components/icon-card-list/icon-card-list.component.html
+++ b/src/app/modules/decorations/components/icon-card-list/icon-card-list.component.html
@@ -1,7 +1,8 @@
 <section>
   <app-icon-card
-    *ngFor="let card of cardListData"
+    *ngFor="let card of cardListData; let i = index"
     [data]="card"
+    [number]="i + 1"
   ></app-icon-card>
   <div>
     <hr />
