--- a/src/app/modules/decorations/components/icon-card-list/icon-card-list.component.scss
+++ b/src/app/modules/decorations/components/icon-card-list/icon-card-list.component.scss
@@ -8,6 +8,7 @@ section {
   @media only screen and (min-width: 576px) {
     flex-direction: row;
     gap: 2rem;
+    align-items: flex-start;
   }
 
   div {
