--- a/src/app/modules/decorations/components/icon-card/icon-card.component.html
+++ b/src/app/modules/decorations/components/icon-card/icon-card.component.html
@@ -1,3 +1,5 @@
+<div class="blank-space" *ngFor="let i of getRange(number - 1)"></div>
+
 <article>
   <div>
     <img src="{{ data.icon }}" alt="{{ data.header }}" />
