--- a/src/app/modules/decorations/components/icon-card/icon-card.component.scss
+++ b/src/app/modules/decorations/components/icon-card/icon-card.component.scss
@@ -1,3 +1,9 @@
+.blank-space {
+  @media only screen and (min-width: 576px) {
+    height: 45px;
+    width: 100%;
+  }
+}
 article {
   display: flex;
   align-items: center;
