--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -83,6 +83,8 @@ main {
 
       @media only screen and (min-width: 576px) {
         background-image: url("../../../assets/images/bg-boost-desktop.svg");
+        height: 250px;
+        gap: 1.7rem;
       }
       height: 300px;
       display: flex;
@@ -153,6 +155,9 @@ main {
         margin-top: 2rem;
 
         padding-bottom: 5rem;
+        @media only screen and (min-width: 576px) {
+          padding-bottom: 6.5rem;
+        }
       }
     }
   }
