--- a/src/app/modules/navigation/components/footer/footer.component.scss
+++ b/src/app/modules/navigation/components/footer/footer.component.scss
@@ -18,6 +18,7 @@ footer {
       align-items: flex-start;
       max-width: 1100px;
       width: 100%;
+      padding: 4.5rem 0;
     }
 
     div {
@@ -27,6 +28,7 @@ footer {
 
       @media only screen and (min-width: 576px) {
         flex-direction: row;
+        gap: 4.5rem;
       }
     }
 
@@ -36,11 +38,19 @@ footer {
       align-items: center;
       gap: 2rem;
       @media only screen and (min-width: 576px) {
-        flex-direction: row;
+        display: grid;
+        grid-auto-flow: column;
+        grid-template-columns: 1fr 1fr 1fr;
         align-items: flex-start;
-        gap: 7rem;
+        max-width: 600px;
+        width: 100%;
+        grid-gap: 5.2rem;
+
         ul {
+          max-width: fit-content;
+          display: flex;
           flex-direction: column;
+          align-items: flex-start;
         }
       }
     }
@@ -73,6 +83,9 @@ footer {
       gap: 1.5rem;
       display: flex;
       flex-direction: row;
+      @media only screen and (min-width: 576px) {
+        max-width: fit-content;
+      }
     }
   }
 }
