--- a/src/app/modules/link-shorting/components/link-card/link-card.component.scss
+++ b/src/app/modules/link-shorting/components/link-card/link-card.component.scss
@@ -11,11 +11,18 @@ article {
 
   align-items: center;
 
+  @media only screen and (min-width: 576px) {
+    max-width: 1100px;
+    padding: 0 1.5rem;
+  }
   hr {
     border: none;
     height: 1px;
     width: 100%;
     background-color: rgba(206, 206, 206, 0.726);
+    @media only screen and (min-width: 576px) {
+      display: none;
+    }
   }
 
   ul {
@@ -25,6 +32,10 @@ article {
     flex-direction: column;
     align-items: center;
 
+    @media only screen and (min-width: 576px) {
+      flex-direction: row;
+      justify-content: space-between;
+    }
     li {
       padding: 0.8rem 0;
       color: black;
@@ -34,8 +45,16 @@ article {
       overflow: hidden;
       text-overflow: ellipsis;
 
+      display: flex;
+      flex-direction: column;
+      gap: 0.7rem;
+
       a {
         color: hsl(180, 66%, 49%);
+      }
+      @media only screen and (min-width: 576px) {
+        flex-direction: row;
+        width: fit-content;
       }
     }
   }
@@ -43,8 +62,12 @@ article {
   div {
     display: block;
     position: relative;
-    width: 91%;
+    width: 100%;
     height: 48px;
-    padding-bottom: 1.1rem;
+    padding-bottom: 0.3rem;
+    @media only screen and (min-width: 576px) {
+      width: 120px;
+      height: 40px;
+    }
   }
 }
