agregado de estilos desktop para link card

--- a/src/app/modules/buttons/components/square-button-text/square-button-text.component.scss
+++ b/src/app/modules/buttons/components/square-button-text/square-button-text.component.scss
@@ -23,6 +23,9 @@ button.fill {
   position: absolute;
   width: 100%;
   padding: 0.7rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   @media only screen and (min-width: 576px) {
     height: 100%;
   }
