--- a/src/app/modules/link-shorting/components/link-card/link-card.component.scss
+++ b/src/app/modules/link-shorting/components/link-card/link-card.component.scss
@@ -14,6 +14,7 @@ article {
   @media only screen and (min-width: 576px) {
     max-width: 1100px;
     padding: 0 1.5rem;
+    width: 100%;
   }
   hr {
     border: none;
