--- a/src/app/modules/navigation/components/footer/footer.component.scss
+++ b/src/app/modules/navigation/components/footer/footer.component.scss
@@ -3,6 +3,7 @@ footer {
   @media only screen and (min-width: 576px) {
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
   }
   span {
     display: flex;
@@ -17,7 +18,7 @@ footer {
       justify-content: space-between;
       align-items: flex-start;
       max-width: 1100px;
-      width: 100%;
+      width: 95%;
       padding: 4.5rem 0;
     }
 
