--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -85,6 +85,8 @@ main {
         background-image: url("../../../assets/images/bg-boost-desktop.svg");
         height: 250px;
         gap: 1.7rem;
+        width: 100vw;
+        background-size: 100vw 100%;
       }
       height: 300px;
       display: flex;
@@ -104,6 +106,9 @@ main {
       align-items: center;
       gap: 2.5rem;
       width: 100%;
+      @media only screen and (min-width: 576px) {
+        width: 95%;
+      }
 
       div {
         display: flex;
