agregado de fondo blanco en text button

--- a/src/app/modules/buttons/components/text-button/text-button.component.html
+++ b/src/app/modules/buttons/components/text-button/text-button.component.html
@@ -1,4 +1,6 @@
-<button [ngClass]="{ fat: type === 'fat', large: type === 'large' }">
-  <ng-content></ng-content>
-  <div></div>
-</button>
+<span [ngClass]="{ fat: type === 'fat', large: type === 'large' }">
+  <button>
+    <ng-content></ng-content>
+    <div></div>
+  </button>
+</span>
