--- a/src/app/modules/buttons/components/text-button/text-button.component.scss
+++ b/src/app/modules/buttons/components/text-button/text-button.component.scss
@@ -1,3 +1,11 @@
+span {
+  position: relative;
+  overflow: hidden;
+
+  border-radius: 200px;
+  background-color: rgb(255, 255, 255);
+}
+
 button {
   border: none;
   background: none;
@@ -5,9 +13,9 @@ button {
   font-size: 18px;
   font-weight: 700;
   color: white;
-  border-radius: 200px;
+
   padding: 0.6rem 1rem;
-  position: relative;
+  margin: 0 auto;
 
   cursor: pointer;
   &:hover {
@@ -15,13 +23,22 @@ button {
   }
 }
 
-// TODO : Update large styles
-button.large {
+span.large {
   display: block;
   width: 100%;
   box-sizing: border-box;
+
+  button {
+    width: 100%;
+  }
 }
 
-button.fat {
-  padding: 0.9rem 2.5rem;
+span.fat {
+  display: block;
+  width: 100%;
+
+  button {
+    width: 100%;
+    padding: 0.9rem 2.5rem;
+  }
 }
