agregado de input fontSize en square button

--- a/src/app/modules/buttons/components/square-button-text/square-button-text.component.html
+++ b/src/app/modules/buttons/components/square-button-text/square-button-text.component.html
@@ -1,3 +1,5 @@
-<button [ngClass]="{ fill: fill, clicked: clicked }">
-  <ng-content></ng-content>
-</button>
+<span [ngClass]="{ fill: fill }">
+  <button [ngClass]="{ clicked: clicked }" #button>
+    <ng-content></ng-content>
+  </button>
+</span>
