--- a/src/app/modules/link-shorting/components/link-card/link-card.component.html
+++ b/src/app/modules/link-shorting/components/link-card/link-card.component.html
@@ -11,6 +11,7 @@
           (click)="copyLink()"
           [clicked]="copied"
           [fill]="true"
+          [fontSize]="16"
           >{{ !copied ? "Copy" : "Copied!" }}</app-square-button-text
         >
       </div>
