terminando estilos responsive en botones

--- a/src/app/modules/buttons/components/text-button/text-button.component.html
+++ b/src/app/modules/buttons/components/text-button/text-button.component.html
@@ -1,5 +1,5 @@
 <span [ngClass]="{ fat: type === 'fat', large: type === 'large' }">
-  <button>
+  <button #button>
     <ng-content></ng-content>
     <div></div>
   </button>
