--- a/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/navigation/components/nav-bar/nav-bar.component.html
@@ -16,8 +16,10 @@
       <li>
         <a href="">Login</a>
       </li>
-      <li>
-        <app-text-button [type]="'large'"> Sign Up </app-text-button>
+      <li class="sign-up">
+        <app-text-button [type]="'large'" [fontSize]="15">
+          Sign Up
+        </app-text-button>
       </li>
     </ul>
     <app-sidemenu [links]="links"></app-sidemenu>
