agregado de catcheo de mal link en shortbox

--- a/src/app/modules/navigation/components/footer/footer.component.html
+++ b/src/app/modules/navigation/components/footer/footer.component.html
@@ -1,6 +1,8 @@
 <footer>
   <span>
-    <img src="./assets/images/logo-invert.svg" alt="shortly-logo" />
+    <a [routerLink]="'/'">
+      <img src="./assets/images/logo-invert.svg" alt="shortly-logo" />
+    </a>
     <div>
       <ul class="links">
         <li class="root-link" *ngFor="let link of links">
