--- a/src/app/modules/link-shorting/components/short-box/short-box.component.scss
+++ b/src/app/modules/link-shorting/components/short-box/short-box.component.scss
@@ -7,7 +7,7 @@ form {
   background-color: hsl(257, 27%, 26%);
   gap: 1rem;
   width: 78%;
-  margin: 0 auto 2rem;
+  margin: 0 auto 1.5rem;
 
   @media only screen and (min-width: 576px) {
     flex-direction: row;
@@ -100,8 +100,11 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 1.5rem;
 
+  @media only screen and (min-width: 576px) {
+    gap: 1rem;
+  }
   li {
     width: 100%;
     margin: 0 auto;
