--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -11,7 +11,13 @@ main {
     width: 100%;
 
     .main-section {
+      app-text-button {
+        margin-top: 1rem;
+      }
       @media only screen and (min-width: 576px) {
+        app-text-button {
+          margin: 0;
+        }
         flex-direction: row-reverse;
         max-width: 1100px;
         height: 550px;
@@ -44,7 +50,7 @@ main {
 
     section {
       background-color: hsl(259deg 28.56% 95.59%);
-      gap: 1rem;
+      gap: 0rem;
 
       article {
         app-short-box {
@@ -138,7 +144,7 @@ main {
       }
 
       h3 {
-        font-size: 27px;
+        font-size: 28px;
         text-align: center;
         line-height: 44px;
         color: hsl(0deg 0% 20.47%);
